apps/mycel-cli/tests/snapshots/view_smoke__view_publish_json_writes_verified_view_into_store__inspect.snap
---
source: apps/mycel-cli/tests/view_smoke.rs
expression: inspect_json
---
{
  "accepted_editor_keys": [
    "pk:ed25519:+kg0FH9uaQw2k+/2EzYEZAPNiuKhTzGzxAc1hWkjlWU="
  ],
  "admitted_editor_only_keys": [],
  "current_profile_document_view_ids": {
    "doc:view-publish": "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c"
  },
  "current_profile_maintainer": "pk:ed25519:+kg0FH9uaQw2k+/2EzYEZAPNiuKhTzGzxAc1hWkjlWU=",
  "current_profile_source": "persisted",
  "current_profile_timestamp": 10,
  "current_profile_view_id": "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c",
  "document_view_ids": {
    "doc:view-publish": [
      "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c"
    ]
  },
  "documents": {
    "doc:view-publish": "rev:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
  },
  "errors": [],
  "governance_policy": {
    "accept_keys": [
      "pk:ed25519:+kg0FH9uaQw2k+/2EzYEZAPNiuKhTzGzxAc1hWkjlWU="
    ],
    "merge_rule": "manual-reviewed",
    "preferred_branches": [
      "main"
    ]
  },
  "is_current_document_view_ids": {
    "doc:view-publish": true
  },
  "is_current_profile_view": true,
  "maintainer": "pk:ed25519:+kg0FH9uaQw2k+/2EzYEZAPNiuKhTzGzxAc1hWkjlWU=",
  "maintainer_is_admitted_editor": true,
  "maintainer_view_ids": [
    "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c"
  ],
  "manifest_path": "[manifest_path]",
  "notes": [
    "governance inspection is separate from reader-facing accepted-head workflows",
    "related maintainer/profile/document view IDs come from persisted governance indexes",
    "current profile governance state comes from persisted governance summaries and latest-view indexes",
    "accepted editor keys come from persisted governance view summaries so mixed-role and shared-key assignments stay inspectable without re-reading the stored view body",
    "governance policy comes from the persisted hash-keyed profile catalog without re-reading the stored view body"
  ],
  "profile_heads": {
    "doc:view-publish": [
      "rev:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
    ]
  },
  "profile_id": "hash:be1f3be17c5e9567121ec8df22d021525efb9e7e732fd8f76e5760dd3e85a957",
  "profile_view_ids": [
    "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c"
  ],
  "status": "ok",
  "store_root": "[store_root]",
  "timestamp": 10,
  "view_id": "view:d8290d3b418f2d492059ce193377801b00bc830b93c26569673729d27e5f106c"
}
